# Course_work_7

./: .env.sample  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py
habits/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py
users/: models.py  urls.py  views.py
users/migrations/: 0001_initial.py
