[tool.poetry]
name = "course-work-7"
version = "0.1.0"
description = ""
authors = ["melcor <melcor2006@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "5.0"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
drf-yasg = "^1.21.7"
celery = "^5.4.0"
eventlet = "^0.36.1"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"
django-cors-headers = "^4.4.0"
setuptools = "^72.1.0"
django-celery-beat = "^2.6.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
